--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,11 +197,13 @@ main h1 a {
 
 .slide img {
   width: 100%;
-  height: 100%;
+  height: auto;      /* 이미지 높이를 자동으로 */
+  max-height: 100%;  /* 부모 슬라이더 높이 넘지 않도록 */
   object-fit: contain;
   object-position: center;
   display: block;
 }
+
 
 .slide-text {
   position: absolute;   /* 이미지 위에 겹치기 */
